[package]
name = "index_key"
version = "0.1.1"
authors = ["hjiayz <hjiayz@hotmail.com>"]
repository = "https://github.com/hjiayz/index_key.git"
edition = "2018"
description = "lexicographic sort order encoding."
keywords = ["lexicographic", "index", "key"]
license = "AGPL-3.0"

[dependencies]
failure = "0.1.6"
